# filedialogs

./: .gitignore  README.md  pyproject.toml
src/filedialog/: __init__.py  __main__.py  linux_kdialog.py  linux_zenity.py  windows.py
src/filedialogs/: __init__.py  linux_kdialog.py  linux_zenity.py  mac.py  tkinter.py
